# rusty-journal

./: Cargo.toml  README.md  test.json
src/: cli.rs  main.rs  tasks.rs
