[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
structopt = "0.3"
chrono = { features = ["serde"], version = "0.4" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
anyhow = "1.0" 